--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "gatsby-plugin-sass": "^1.0.26",
     "isomorphic-fetch": "^2.2.1",
     "react-helmet": "^5.2.0",
+    "react-mailchimp-subscribe": "^2.0.2",
     "react-slick": "^0.20.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^3.2.6",
     "webfontloader": "^1.6.28"
   },
   "keywords": [
